Обновление шаблона 'Empty Module'

--- a/tools/geminio/geminio_config.yaml
+++ b/tools/geminio/geminio_config.yaml
@@ -1,4 +1,6 @@
 templatesRootDirPath: /android-style-guide/tools/geminio/templates
+modulesTemplatesRootDirPath: /android-style-guide/tools/geminio/modules_templates
 
 groupsNames:
   forNewGroup: HH Templates
+  forNewModulesGroup: HH Modules Templates
