Обновление шаблона 'ContainerFragment'

--- a/tools/geminio/templates/Cell/recipe.yaml
+++ b/tools/geminio/templates/Cell/recipe.yaml
@@ -36,6 +36,7 @@ recipe:
   # dependencies
   - addDependencies:
     # projects
-      - compileOnly: :shared-core-ui-design-system
+      - compileOnly: :shared:core:ui:design-system
+      - compileOnly: :shared:core:ui:cells-framework
     # libraries
       - compileOnly: Libs.support.recyclerView
