--- a/tools/geminio/templates/MVI: Compact Feature/recipe.yaml
+++ b/tools/geminio/templates/MVI: Compact Feature/recipe.yaml
@@ -28,7 +28,7 @@ recipe:
       - compileOnly: Libs.mviCore.binder
       - compileOnly: Libs.rx.rxJava
       - compileOnly: Libs.rx.rxKotlin
-      - compileOnly: :shared-core-rx
+      - compileOnly: :shared:core:rx-core
       - compileOnly: Libs.toothpick.core
       - compileOnly: Libs.toothpick.ktp
       - kapt: Libs.toothpick.compiler
