--- a/tools/geminio/templates/Network/recipe.yaml
+++ b/tools/geminio/templates/Network/recipe.yaml
@@ -64,8 +64,8 @@ recipe:
       to: ${srcOut}/model/${networkModelName}.kt
 
   - addDependencies:
-      - compileOnly: :shared-core-network
-      - compileOnly: :shared-core-network-model
+      - compileOnly: :shared:core:network
+      - compileOnly: :shared:core:network-model
       - compileOnly: Libs.network.kotlinxSerializationJson
       - compileOnly: Libs.network.retrofit
       - compileOnly: Libs.network.retrofitKotlinxConverter
