--- a/tools/geminio/templates/MVI: Compact Feature/recipe.yaml
+++ b/tools/geminio/templates/MVI: Compact Feature/recipe.yaml
@@ -24,7 +24,7 @@ recipe:
       to: ${srcOut}/${featureName}.kt
 
   - addDependencies:
-      - compileOnly: :core-mvi
+      - compileOnly: :shared:core:mvi-core
       - compileOnly: Libs.mviCore.binder
       - compileOnly: Libs.rx.rxJava
       - compileOnly: Libs.rx.rxKotlin
