Обновление шаблона 'Custom View'

--- a/tools/geminio/templates/Custom View/recipe.yaml
+++ b/tools/geminio/templates/Custom View/recipe.yaml
@@ -57,3 +57,6 @@ recipe:
         - instantiate:
             from: root/res/values/attrs.xml.ftl
             to: ${resOut}/values/${attrsName}.xml
+
+  - addDependencies:
+      - compileOnly: :shared:core:ui:design-system
