[MOB-18940] Адаптируем шаблон нового модуля под kts и convention-плагины

--- a/tools/geminio/modules_templates/Empty Module/recipe.yaml
+++ b/tools/geminio/modules_templates/Empty Module/recipe.yaml
@@ -85,8 +85,8 @@ recipe:
       to: ${rootOut}/.gitignore
 
   - instantiateAndOpen:
-      from: root/build.gradle.ftl
-      to: ${rootOut}/build.gradle
+      from: root/build.gradle.kts.ftl
+      to: ${rootOut}/build.gradle.kts
 
   - instantiateAndOpen:
       from: root/README.md
